# resource-agent-factory

./: CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
generator/: agent_generator.py
generator/templates/: routes.py.j2
scripts/: fix-generated-ownership.sh
tests/: conftest.py
