[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-agent-factory"
version = "0.5.7"
description = "Agent code generation from YAML contracts"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "hypervisor",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
hypervisor = { path = "../hypervisor", editable = true }
